# monitoring_price_scrapy

./: .env  Home.py  README.md  nohup.out  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: etl_update.yml
data/: data.jsonl  notebooks_ml.db  price_notebooks_ml.db
pages/: 1_🎲_Análise Gráfica.py  2_📈_Cards Notebooks.py
src/coleta/: settings.py
src/coleta/spiders/: mercadolivre.py
src/dashboard/: app.py  app_deploy.py
src/transform/: main.py  notebook_test.ipynb  procedural.py  run_transformation.py
