[tool.poetry]
name = "price-monitoring"
version = "0.1.0"
description = "Projeto de monitoramento de preços do Mercado Livre: Python, Scrapy, Pandas e Streamlit"
authors = ["Vinicius Borges - Vorges Data"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
pandas = "^2.2.2"
streamlit = "^1.34.0"
regex = "^2024.5.15"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
